test/fail/ajaxtemplate-2.app
//A page cannot be an ajax template

application test

  define page root() {

  }
  
  define ajax page bla(i:Int){
    output(i)
  }